Started with debug for secrets. Secrets icon based on secret price.

--- a/package/user.ltx
+++ b/package/user.ltx
@@ -281,6 +281,8 @@ rs_c_gamma 1.
 rs_cam_pos off
 rs_fps off
 rs_fps_graph off
+rs_fps_limit 165
+rs_fps_limit_in_menu 165
 rs_fullscreen off
 rs_refresh_60hz off
 rs_skeleton_update 32
